accepted event fix